k8s/addons/dashboard/00-namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
