k8s/addons/dashboard/52-metric-scraper-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dashboard-metrics-scraper
  namespace: kubernetes-dashboard
  labels:
    k8s-app: dashboard-metrics-scraper
spec:
  selector:
    k8s-app: dashboard-metrics-scraper
  ports:
  - port: 8000
    targetPort: 8000
